--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,7 @@
 #app {
   display: flex;
   flex-direction: column;
-  max-width: 1280px;
+  max-width: 1920px;
   margin: 0 auto;
 
   font-weight: normal;
@@ -12,5 +12,7 @@
 .container {
   max-width: 1588px;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0 15px;
 }
